# face-recognition-android-app

./: LICENSE  README.md
face_app/: settings.gradle
face_app/app/: CMakeLists.txt  build.gradle
face_app/app/src/androidTest/java/com/face_app/: ExampleInstrumentedTest.java
face_app/app/src/main/cpp/: detect.cpp
face_app/app/src/main/java/com/face_rec_app/: Face.java  MainActivity.java
face_app/app/src/main/res/layout/: activity_main.xml
face_app/app/src/test/java/com/face_app/: ExampleUnitTest.java
face_app/gradle/wrapper/: gradle-wrapper.properties
face_rec_app/: settings.gradle
face_rec_app/app/: build.gradle
face_rec_app/app/src/androidTest/java/com/face_rec_app/: ExampleInstrumentedTest.java
face_rec_app/app/src/main/: AndroidManifest.xml
face_rec_app/app/src/main/cpp/include/: platform.h
face_rec_app/app/src/main/java/com/face_rec_app/: Face.java  MainActivity.java
face_rec_app/app/src/test/java/com/face_rec_app/: ExampleUnitTest.java
face_rec_app/gradle/wrapper/: gradle-wrapper.properties
install-armv7/install/lib/cmake/ncnn/: ncnn.cmake
install/lib/cmake/ncnn/: ncnn.cmake
install2/include/ncnn/: platform.h
install2/lib/cmake/ncnn/: ncnn.cmake
